erDiagram
  alembic_version {
    VARCHAR version_num PK
  }
  customers {
    TEXT customer_code
    TEXT customer_name
    TEXT address
    TIMESTAMP created_at
    TIMESTAMP updated_at
    VARCHAR created_by
    VARCHAR updated_by
    TIMESTAMP deleted_at
    INTEGER revision
    INTEGER id PK
  }
  delivery_places {
    INTEGER id PK
    VARCHAR delivery_place_code
    VARCHAR delivery_place_name
    VARCHAR address
    VARCHAR postal_code
    BOOLEAN is_active
    TIMESTAMP created_at
    TIMESTAMP updated_at
    VARCHAR created_by
    VARCHAR updated_by
    TIMESTAMP deleted_at
    INTEGER revision
  }
  inbound_submissions {
    INTEGER id PK
    TEXT submission_id
    TEXT source_uri
    VARCHAR source
    TEXT operator
    TIMESTAMP submission_date
    TEXT status
    INTEGER total_records
    INTEGER processed_records
    INTEGER failed_records
    INTEGER skipped_records
    TEXT error_details
    TIMESTAMP created_at
    TIMESTAMP updated_at
    VARCHAR created_by
    VARCHAR updated_by
    TIMESTAMP deleted_at
    INTEGER revision
  }
  suppliers {
    TEXT supplier_code
    TEXT supplier_name
    TEXT address
    TIMESTAMP created_at
    TIMESTAMP updated_at
    VARCHAR created_by
    VARCHAR updated_by
    TIMESTAMP deleted_at
    INTEGER revision
    INTEGER id PK
  }
  warehouses {
    TEXT warehouse_code
    TEXT warehouse_name
    TEXT address
    BOOLEAN is_active
    TIMESTAMP created_at
    TIMESTAMP updated_at
    VARCHAR created_by
    VARCHAR updated_by
    TIMESTAMP deleted_at
    INTEGER revision
    INTEGER id PK
  }
  orders {
    INTEGER id PK
    TEXT order_no
    DATE order_date
    TEXT status
    TEXT sap_order_id
    TEXT sap_status
    TIMESTAMP sap_sent_at
    TEXT sap_error_msg
    TIMESTAMP created_at
    TIMESTAMP updated_at
    VARCHAR created_by
    VARCHAR updated_by
    TIMESTAMP deleted_at
    INTEGER revision
    TEXT customer_order_no
    TEXT delivery_mode
    INTEGER customer_id FK
    VARCHAR customer_order_no_last6
  }
  products {
    TEXT product_code
    TEXT product_name
    TEXT customer_part_no
    TEXT maker_item_code
    TEXT internal_unit
    TEXT assemble_div
    TEXT next_div
    INTEGER shelf_life_days
    INTEGER requires_lot_number
    TIMESTAMP created_at
    TIMESTAMP updated_at
    VARCHAR created_by
    VARCHAR updated_by
    TIMESTAMP deleted_at
    INTEGER revision
    VARCHAR base_unit
    NUMERIC packaging_qty
    VARCHAR packaging_unit
    VARCHAR supplier_item_code
    INTEGER delivery_place_id FK
    VARCHAR ji_ku_text
    VARCHAR kumitsuke_ku_text
    VARCHAR delivery_place_name
    VARCHAR shipping_warehouse_name
    INTEGER id PK
    INTEGER supplier_id FK
  }
  expiry_rules {
    INTEGER id PK
    TEXT rule_type
    INTEGER days
    DATE fixed_date
    BOOLEAN is_active
    INTEGER priority
    TIMESTAMP created_at
    TIMESTAMP updated_at
    VARCHAR created_by
    VARCHAR updated_by
    TIMESTAMP deleted_at
    INTEGER revision
    INTEGER product_id FK
    INTEGER supplier_id FK
  }
  forecasts {
    INTEGER id PK
    VARCHAR forecast_id
    VARCHAR granularity
    DATE date_day
    DATE date_dekad_start
    VARCHAR year_month
    INTEGER qty_forecast
    INTEGER version_no
    TIMESTAMP version_issued_at
    VARCHAR source_system
    BOOLEAN is_active
    TIMESTAMP created_at
    TIMESTAMP updated_at
    VARCHAR created_by
    VARCHAR updated_by
    TIMESTAMP deleted_at
    INTEGER revision
    INTEGER product_id FK
    INTEGER customer_id FK
  }
  lots {
    INTEGER id PK
    TEXT lot_number
    DATE receipt_date
    DATE mfg_date
    DATE expiry_date
    TEXT kanban_class
    TEXT sales_unit
    TEXT inventory_unit
    TEXT received_by
    TEXT source_doc
    TEXT qc_certificate_status
    TEXT qc_certificate_file
    TIMESTAMP created_at
    TIMESTAMP updated_at
    VARCHAR created_by
    VARCHAR updated_by
    TIMESTAMP deleted_at
    INTEGER revision
    TEXT warehouse_code_old
    VARCHAR lot_unit
    BOOLEAN is_locked
    TEXT lock_reason
    DATE inspection_date
    TEXT inspection_result
    INTEGER warehouse_id FK
    INTEGER product_id FK
    INTEGER supplier_id FK
  }
  order_lines {
    INTEGER id PK
    INTEGER order_id FK
    INTEGER line_no
    NUMERIC quantity
    TEXT unit
    TIMESTAMP created_at
    TIMESTAMP updated_at
    VARCHAR created_by
    VARCHAR updated_by
    TIMESTAMP deleted_at
    INTEGER revision
    INTEGER product_id FK
  }
  sap_sync_logs {
    INTEGER id PK
    INTEGER order_id FK
    TEXT payload
    TEXT result
    TEXT status
    TIMESTAMP executed_at
    TIMESTAMP created_at
    TIMESTAMP updated_at
    VARCHAR created_by
    VARCHAR updated_by
    TIMESTAMP deleted_at
    INTEGER revision
  }
  unit_conversions {
    INTEGER id PK
    VARCHAR from_unit
    VARCHAR to_unit
    NUMERIC factor
    TIMESTAMP created_at
    TIMESTAMP updated_at
    VARCHAR created_by
    VARCHAR updated_by
    TIMESTAMP deleted_at
    INTEGER revision
    INTEGER product_id FK
  }
  allocations {
    INTEGER id PK
    INTEGER order_line_id FK
    INTEGER lot_id FK
    FLOAT allocated_qty
    TIMESTAMP created_at
    TIMESTAMP updated_at
    VARCHAR created_by
    VARCHAR updated_by
    TIMESTAMP deleted_at
    INTEGER revision
    INTEGER destination_id FK
  }
  lot_current_stock {
    INTEGER lot_id PK FK
    FLOAT current_quantity
    TIMESTAMP last_updated
    TIMESTAMP created_at
    TIMESTAMP updated_at
    VARCHAR created_by
    VARCHAR updated_by
    TIMESTAMP deleted_at
    INTEGER revision
  }
  order_line_warehouse_allocation {
    INTEGER id PK
    INTEGER order_line_id FK
    INTEGER warehouse_id
    NUMERIC quantity
    TIMESTAMP created_at
    TIMESTAMP updated_at
    VARCHAR created_by
    VARCHAR updated_by
    TIMESTAMP deleted_at
    INTEGER revision
  }
  purchase_requests {
    INTEGER id PK
    FLOAT requested_qty
    TEXT unit
    TEXT reason_code
    INTEGER src_order_line_id FK
    DATE requested_date
    DATE desired_receipt_date
    TEXT status
    TEXT sap_po_id
    TEXT notes
    TIMESTAMP created_at
    TIMESTAMP updated_at
    VARCHAR created_by
    VARCHAR updated_by
    TIMESTAMP deleted_at
    INTEGER revision
    INTEGER product_id FK
    INTEGER supplier_id FK
  }
  stock_movements {
    INTEGER id PK
    INTEGER lot_id FK
    TEXT reason
    NUMERIC quantity_delta
    TIMESTAMP occurred_at
    TIMESTAMP created_at
    TIMESTAMP updated_at
    VARCHAR created_by
    VARCHAR updated_by
    TIMESTAMP deleted_at
    INTEGER revision
    INTEGER warehouse_id FK
    VARCHAR source_table
    INTEGER source_id
    VARCHAR batch_id
    INTEGER product_id FK
  }
  orders }o--|| customers : customer_id_to_id
  products }o--|| delivery_places : delivery_place_id_to_id
  products }o--|| suppliers : supplier_id_to_id
  expiry_rules }o--|| suppliers : supplier_id_to_id
  expiry_rules }o--|| products : product_id_to_id
  forecasts }o--|| products : product_id_to_id
  forecasts }o--|| customers : customer_id_to_id
  lots }o--|| warehouses : warehouse_id_to_id
  lots }o--|| products : product_id_to_id
  lots }o--|| suppliers : supplier_id_to_id
  order_lines }o--|| orders : order_id_to_id
  order_lines }o--|| products : product_id_to_id
  sap_sync_logs }o--|| orders : order_id_to_id
  unit_conversions }o--|| products : product_id_to_id
  allocations }o--|| order_lines : order_line_id_to_id
  allocations }o--|| delivery_places : destination_id_to_id
  allocations }o--|| lots : lot_id_to_id
  lot_current_stock }o--|| lots : lot_id_to_id
  order_line_warehouse_allocation }o--|| order_lines : order_line_id_to_id
  purchase_requests }o--|| order_lines : src_order_line_id_to_id
  purchase_requests }o--|| suppliers : supplier_id_to_id
  purchase_requests }o--|| products : product_id_to_id
  stock_movements }o--|| lots : lot_id_to_id
  stock_movements }o--|| warehouses : warehouse_id_to_id
  stock_movements }o--|| products : product_id_to_id